--- a/views/documents/PublicDocs.ejs
+++ b/views/documents/PublicDocs.ejs
@@ -15,6 +15,10 @@
         Documents
       <!-- <div class="ui teal left pointing label">1</div> -->
     </a>
+    <a class="item" id="savedDoc">
+      Saved Documents
+      <!-- <div class="ui label">1</div> -->
+    </a>
   </div>
 
   <div class="contentDiv">
@@ -41,11 +45,11 @@
                     <td><%= file.metadata.contentType %></td>
                     <td><%= file.metadata.timeCreated.split('T')[0] %></td>
                     <td class="vis" id="sernum<%=serNum%>"><%=file.metadata.metadata.visibility%></td>
-                    <td><i id="delete@<%=file.name%>@<%=serNum%>" title="Delete" data-toggle="modal" data-target="#modal1" class="trash icon delete-btn"></i>  
-                      <% if(file.metadata.metadata.visibility.localeCompare("public") == 0) { %> 
-                        <i id="vis@<%=file.name%>@<%=serNum%>" title="Change visibility" data-toggle="modal" data-target="#modal2" class="eye icon change-btn"></i>
-                      <% }%>
-                        
+                    <% if( present[serNum-1]== 0) { %> 
+                    <td><i id="delete@<%=file.name%>@<%=serNum%>" title="Delete" data-toggle="modal" data-target="#modal1" class="fa fa-save "></i>     
+                      <% } else {%>
+                        <td><i id="NM" title="Delete" data-toggle="modal" data-target="#modal1" class="tick-mark"></i>     
+                          <% } %>    
                     </td>
                   </tr>
               <% }) %>
@@ -54,6 +58,7 @@
     </div>
   </div>
 </div>
+
 
 <div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
@@ -65,11 +70,11 @@
         </button>
       </div>
       <div class="modal-body">
-        Are you sure you want to delete this file?
+        Are you sure you want to save this file?
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-danger" id="deletefilebtn">Delete</button>
+        <button type="button" class="btn btn-danger" id="deletefilebtn">Save</button>
       </div>
     </div>
   </div>
@@ -101,7 +106,8 @@
   <input id="visForm" name="visForm">
 </form>
 
-<form id="deleteFileForm" action="/documents/delete" method="POST" style="display: none;">
+<% var save = "/documents/save?stud="+stud %>
+<form id="deleteFileForm" action= <%=save %> method="POST" style="display: none;">
   <input id="fileNameForm2" name="fileNameForm2">;
 </form>
 
