--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -26,9 +26,9 @@
                           <div class="slider__contents">
                             <i class="slider__image fas fa-home"></i>
                             <h2 class="slider__caption">NAME</h2>
-                            <p class="slider__txt"><%= user.Name %></p>
+                            <p class="slider__txt"><%= user2.Name %></p>
                             <h2 class="slider__caption">Roll Number</h2>
-                            <p class="slider__txt"><%= user.rollNumber %></p>
+                            <p class="slider__txt"><%= user2.rollNumber %></p>
                           </div>
                           <div class="slider__contents">
                             <i class="slider__image fab fa-buffer"></i>
@@ -42,9 +42,9 @@
                           <div class="slider__contents">
                             <i class="slider__image fas fa-portrait"></i>
                             <h2 class="slider__caption">EMAIL</h2>
-                            <p class="slider__txt"><%= user.email %></p>
+                            <p class="slider__txt"><%= user2.email %></p>
                             <h2 class="slider__caption">CONTACT</h2>
-                            <p class="slider__txt"><%= user.Phone %></p>
+                            <p class="slider__txt"><%= user2.Phone %></p>
                           </div>
                           <div class="slider__contents"></div>
                         </div>
@@ -77,7 +77,7 @@
 </div>
 <br><br>
 <div class="container" id="fileContainer">
-  <h2><%=user.Name%>'s Files</h2>
+  <h2><%=user2.Name%>'s Files</h2>
   <div class="contentDiv">
     <div>
           <table class="table table-bordered table-dark table-hover">
@@ -87,6 +87,7 @@
                 <th scope="col">Name</th>
                 <th scope="col">Content Type</th>
                 <th scope="col">Date of Creation</th>
+                <th></th>
               </tr>
             </thead>
             <tbody>
@@ -99,6 +100,10 @@
                       <td><a class="filename" target="_blank" href="<%=url%><%=file.name%>"><%= file.name.split('/')[3] %></a></td>
                       <td><%= file.metadata.contentType %></td>
                       <td><%= file.metadata.timeCreated.split('T')[0] %></td>
+                      <form method="POST" action="/documents/saveDoc/<%=user.rollNumber%>">
+                        <input style="display: none;" id="docURL" name="docURL" value="<%=url%><%=file.name%>">
+                      <td class="save-class"><button class="save-btn" type="submit"></button></td>
+                      </form>
                     </tr>
                 <% }) %>
               <% } else { %>
